Fixed whitespace when resizing in "Home", "Login, "Register" and "AddProduct" pages. To do left: "Buy", "About".

--- a/frontend/src/Styles/AddProduct.css
+++ b/frontend/src/Styles/AddProduct.css
@@ -1,4 +1,8 @@
-.addAccountBackground{
+.wrapper-addProduct{
+    overflow: hidden;
+}
+
+.addProductBackground{
     width: 100%;
     height: 150px;
     background: rgba(217, 231, 13, 0.795);
@@ -8,7 +12,7 @@
     z-index:-2;
 }
 
-.addAccount-content{
+.addProduct-content{
     background-color: rgb(246, 245, 245);
     width: 500px;
     min-height: 400px;
