--- a/frontend/src/Styles/Header.css
+++ b/frontend/src/Styles/Header.css
@@ -5,8 +5,6 @@
     display: flex;
     flex-direction: row;
     width: 100%;
-    
-    
   }
   
   .navbar_wrapper{
@@ -134,11 +132,15 @@
  @media only screen and (max-width: 1200px) {
 
 
-    .search,.navbar-buttons { display: none; } 
+  .search,.navbar-buttons { display: none; } 
 
     .navbar-home-icon{  
   margin-left: auto;
   margin-right: auto;
+
   }
   }
 
+  @media only screen and (max-width: 300px){
+    .navbar-home-icon{ display: none;}
+  }
