--- a/frontend/src/Styles/Login.css
+++ b/frontend/src/Styles/Login.css
@@ -1,3 +1,7 @@
+.wrapper-login{
+    overflow: hidden;
+}
+
 .login-background{
     width: 100%;
     height: 150px;
@@ -5,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    z-index:-2;
+    z-index:-1;
 }
 
 .login-content{
