--- a/frontend/src/Styles/Register.css
+++ b/frontend/src/Styles/Register.css
@@ -1,3 +1,8 @@
+.wrapper-register{
+    overflow: hidden;
+
+}
+
 .register-background{
     width: 100%;
     height: 150px;
@@ -18,4 +23,5 @@
     position: relative;
     padding-top: 20px;
     padding-bottom: 20px;
+
 }
